--- a/app/src/main/res/layout/hit_factor.xml
+++ b/app/src/main/res/layout/hit_factor.xml
@@ -95,9 +95,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingBottom="20dp"
         android:gravity="bottom|center">
         <TextView
             android:layout_width="wrap_content"
@@ -111,5 +110,11 @@
             android:id="@+id/textview_hitfactor"
             android:textStyle="bold"/>
     </LinearLayout>
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Classifier Results"
+        android:id="@+id/button_calculateAsClassifier"
+        android:layout_gravity="center_horizontal"
+        android:gravity="top|center"/>
 </LinearLayout>
