--- a/app/src/main/res/layout/classifier_selector.xml
+++ b/app/src/main/res/layout/classifier_selector.xml
@@ -27,8 +27,10 @@
         android:inputType="numberDecimal"
         android:ems="10"
         android:id="@+id/editText_hitFactor"
+        android:hint="Enter the Hit Factor"
         android:layout_gravity="center_horizontal"
         android:paddingTop="10dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dip"
