--- a/app/src/main/res/layout/classifier_selector.xml
+++ b/app/src/main/res/layout/classifier_selector.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+    android:background="@drawable/brass">
 
 
     <TextView
@@ -12,7 +13,8 @@
         android:text="Select a classifier and enter your hit factor\nThen select Go to see the results"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0"
-        android:paddingTop="10dp"/>
+        android:paddingTop="10dp"
+        android:textColor="@color/colorWhite"/>
 
     <Spinner
         android:layout_width="match_parent"
@@ -29,7 +31,8 @@
         android:id="@+id/editText_hitFactor"
         android:hint="Enter the Hit Factor"
         android:layout_gravity="center_horizontal"
-        android:paddingTop="10dp"/>
+        android:paddingTop="10dp"
+        android:textColor="@color/colorWhite"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,6 +46,7 @@
             android:layout_height="wrap_content"
             android:text="Go!"
             android:id="@+id/button_go"
-            android:gravity="center|bottom"/>
+            android:gravity="center|bottom"
+            android:textColor="@color/colorWhite"/>
     </LinearLayout>
 </LinearLayout>
