--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -3,57 +3,52 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:gravity="top"
+    android:orientation="vertical"
+    android:background="@drawable/brass">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
-        android:paddingBottom="50dp"
-        android:text="Welcome to RangeMate!"/>
+        android:paddingTop="50dp"
+        android:text="Welcome to RangeMate!"
+        android:textStyle="bold"
+        android:textSize="30dp"
+        android:textColor="@color/colorWhite"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-    <Button
-        android:id="@+id/stages_button"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Stages"/>
-    <Button
-        android:id="@+id/hitFactor_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hit Factor"
-        android:onClick="startHitFactor"/>
-    </LinearLayout>
-
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:paddingTop="40dp"
+        android:layout_gravity="bottom|center"
+        android:text="Choose a task from below"
+        android:textColor="@color/colorWhite"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="93dp"
         android:gravity="center"
         android:orientation="horizontal">
+
         <Button
-            android:id="@+id/classifiers_button"
+            android:id="@+id/stages_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Classifiers"/>
-    </LinearLayout>
+            android:text="Stages"/>
+        <Button
+            android:id="@+id/hitFactor_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hit Factor"
+            android:onClick="startHitFactor"/>
+            <Button
+                android:id="@+id/classifiers_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Classifiers"/>
+        </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="bottom">
-
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                     android:id="@+id/fragment_main"
-                     android:layout_width="match_parent"
-                     android:layout_height="match_parent">
-
-        </FrameLayout>
-    </LinearLayout>
 
 </LinearLayout>
