--- a/app/src/main/res/layout/hit_factor.xml
+++ b/app/src/main/res/layout/hit_factor.xml
@@ -5,20 +5,27 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:paddingTop="10dp">
+    android:paddingTop="10dp"
+    android:background="@drawable/brass">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
         android:paddingBottom="10dp"
-        android:text="Calculate Hit Factor"/>
+        android:text="Calculate Hit Factor"
+        android:textColor="@color/colorWhite"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Minor"
-        android:id="@+id/checkBox_minor"/>
+        android:id="@+id/checkBox_minor"
+        android:textColor="@color/colorWhite"
+        android:shadowColor="@color/colorWhite"
+        android:textColorHint="@color/colorWhite"
+        android:textColorHighlight="@color/colorWhite"
+        android:textColorLink="@color/colorWhite"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -28,7 +35,12 @@
         android:id="@+id/editText_time"
         android:layout_gravity="center_horizontal"
         android:hint="Time"
-        android:paddingTop="30dp"/>
+        android:paddingTop="30dp"
+        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorWhite"
+        android:textColorLink="@color/colorWhite"
+        android:shadowColor="@color/colorWhite"
+        android:textColorHighlight="@color/colorWhite"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -37,7 +49,9 @@
         android:ems="10"
         android:id="@+id/editText_alpha"
         android:layout_gravity="center_horizontal"
-        android:hint="Alphas"/>
+        android:hint="Alphas"
+        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorWhite"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -46,7 +60,9 @@
         android:ems="10"
         android:id="@+id/editText_bravo"
         android:layout_gravity="center_horizontal"
-        android:hint="Bravos"/>
+        android:hint="Bravos"
+        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorWhite"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -55,7 +71,9 @@
         android:ems="10"
         android:id="@+id/editText_charlie"
         android:layout_gravity="center_horizontal"
-        android:hint="Charlies"/>
+        android:hint="Charlies"
+        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorWhite"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -64,7 +82,9 @@
         android:ems="10"
         android:id="@+id/editText_delta"
         android:layout_gravity="center_horizontal"
-        android:hint="Deltas"/>
+        android:hint="Deltas"
+        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorWhite"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -73,7 +93,9 @@
         android:ems="10"
         android:id="@+id/editText_mike"
         android:layout_gravity="center_horizontal"
-        android:hint="Mikes"/>
+        android:hint="Mikes"
+        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorWhite"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -82,7 +104,9 @@
         android:ems="10"
         android:id="@+id/editText_noShoot"
         android:layout_gravity="center_horizontal"
-        android:hint="No Shoots"/>
+        android:hint="No Shoots"
+        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorWhite"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -91,7 +115,9 @@
         android:ems="10"
         android:id="@+id/editText_procedural"
         android:layout_gravity="center_horizontal"
-        android:hint="Procedurals"/>
+        android:hint="Procedurals"
+        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorWhite"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -102,13 +128,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hit Factor:"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:textColor="@color/colorWhite"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0.0"
             android:id="@+id/textview_hitfactor"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:textColor="@color/colorWhite"/>
     </LinearLayout>
     <Button
         android:layout_width="wrap_content"
@@ -116,5 +144,6 @@
         android:text="Classifier Results"
         android:id="@+id/button_calculateAsClassifier"
         android:layout_gravity="center_horizontal"
-        android:gravity="top|center"/>
+        android:gravity="top|center"
+        android:textColor="@color/colorWhite"/>
 </LinearLayout>
